# dexar_website_classification

./: README.md  pyproject.toml
.antigravitycli/: d57be385-e6aa-4c68-8f2a-6735c330157a.json
artifacts/modernbert/: config.json  history.json  model.safetensors
artifacts/processed/: dataset_report.json  label_map.json  split_indices.json  test.parquet  val.parquet
artifacts/results/: ablations.json  baseline.json  modernbert.json  scratch.json
notebooks/: 01_eda.ipynb  01_eda.py  02_baseline_tfidf.ipynb  02_baseline_tfidf.py  03_scratch_model.ipynb  03_scratch_model.py  04_modernbert_finetune.ipynb  04_modernbert_finetune.py  05_results_ablations.ipynb  05_results_ablations.py
src/wcc/: __init__.py  data.py  datasets.py  download.py  extract.py  fetch.py  metrics.py  models.py  train.py
tests/: test_data.py  test_datasets.py  test_extract.py  test_fetch.py  test_metrics.py  test_models.py  test_train.py
