[project]
name = "website-category-classifier"
version = "0.1.2"
description = "Deep-learning classifier that predicts a website's category from its URL / page content."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.12.0",
    "transformers>=4.48",
    "accelerate>=1.0",
    "datasets>=3.0",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=17.0",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "httpx>=0.28",
    "langdetect>=1.0.9",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "wordcloud>=1.9",
    "tqdm>=4.67",
    "jupytext>=1.19.3",
]

[project.scripts]
wcc-fetch = "wcc.fetch:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbconvert>=7.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
